# squiral.py

./: .black  .gitignore  .pre-commit-config.yaml  .replit  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-tool.in  requirements-tool.txt  requirements.in  requirements.txt  squiral.py  squiral.txt  test_squiral.py  testdata_squiral.py
.github/workflows/: codecov.yml  upgrader-branch.yml  upgrader.yml
scripts/: upgrader.sh
