[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.masonry.api"

[project]
name = "squiral.py"
version = "0.2.0"
description = "squiral - square spiral"
authors = [
    {name = "Sadık Kuzu"}
]
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
flake8 = "^7.0.0"
pre-commit = "^4.0.0"
