[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "squiral.py"
version = "0.2.0"
description = "squiral - square spiral"
authors = [
    {name = "Sadık Kuzu"}
]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "flake8>=7.0.0",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["squiral.py"]
