[project]
name = "squiral-py"
version = "0.2.0"
description = "squiral - square spiral"
authors = [
    {name = "Sadık Kuzu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "squiral",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "flake8>=7.0.0",
    "pre-commit>=4.0.0",
]

[tool.uv]
package = false
